--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,8 +1,13 @@
 <div class="content">
     <ul>
-        <li style="color: #fff">&copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.io" target="_blank">CinemaPress</a></li>
+        <li style="color: #fff">&copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.io"
+                                                                                    target="_blank">CinemaPress</a></li>
         <li><a href="/"><%- page.l.home %></a></li>
-        <li style="color: #ccc">Email: <span id="mylo">Activate JS</span><script>(function(d,i,l,r){d.getElementById(i).innerHTML=l+'@'+r;})(window.document,'mylo','<%- page.email.split('@')[0] %>','<%- page.email.split('@')[1] %>');</script></li>
+        <li style="color: #ccc">Email: <span id="mylo">Activate JS</span>
+            <script>(function(d, i, l, r) {
+                d.getElementById(i).innerHTML = l + '@' + r;
+              })(window.document, 'mylo', '<%- page.email.split('@')[0] %>', '<%- page.email.split('@')[1] %>');</script>
+        </li>
         <li class="top" id="back-top"><a href="#top" id="top_footer" rel="nofollow"><%- page.l.up %></a></li>
     </ul>
 </div>
@@ -13,9 +18,9 @@
 
 <script>
   WebFontConfig = {
-    google: {families: ['PT+Sans+Narrow:400,700', 'Source+Sans+Pro:400,600,400italic,700italic,700:latin', 'PT+Sans:400latin,400cyrillic,700latin,700cyrillic']}
+    google: { families: ['PT+Sans+Narrow:400,700', 'Source+Sans+Pro:400,600,400italic,700italic,700:latin', 'PT+Sans:400latin,400cyrillic,700latin,700cyrillic'] }
   };
-  (function () {
+  (function() {
     var wf = document.createElement('script');
     wf.src = '//ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
     wf.type = 'text/javascript';
