--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,17 +1,20 @@
 <div class="new_head">
     <div class="head">
         <div class="logo">
-            <a href="/" rel="nofollow"><img src="/themes/<%- page.theme %>/public/images/logo.svg?v=<%- page.ver %>" alt="Logo" style="height:60px;margin-top:14px"></a>
+            <a href="/" rel="nofollow"><img src="/themes/<%- page.theme %>/public/images/logo.svg?v=<%- page.ver %>"
+                                            alt="Logo" style="height:60px;margin-top:14px"></a>
         </div>
         <div class="randomMovieMenu">
             <a href="/?random=<%- Math.random() %>" class="dice cinemapress-random-menu" title="<%= page.l.lucky %>">
                 <span><%- page.l.lucky %></span>
             </a>
         </div>
-        <a href="javascript:void(0)" class="reg continueViewingBlock" id="continueViewing" style="display: none;"><%- page.l.continue %>?</a>
+        <a href="javascript:void(0)" class="reg continueViewingBlock" id="continueViewing"
+           style="display: none;"><%- page.l.continue %>?</a>
         <div class="search">
             <form action="/<%- page.urls.search %>" name="searchform" method="get">
-                <input type="text" class="search_inp" name="q" id="story" placeholder="<%- page.l.search %>..." data-autocomplete="desktop">
+                <input type="text" class="search_inp" name="q" id="story" placeholder="<%- page.l.search %>..."
+                       data-autocomplete="desktop">
                 <input type="submit" class="search_but" value="" rel="nofollow">
                 <div class="cinemapress-autocomplete" data-autocomplete="desktop"></div>
             </form>
@@ -47,20 +50,35 @@
                 <div class="links">
                     <ul>
                         <li><a href="/"><%- page.l.home %></a></li>
-                        <li><a href="/<%- page.urls.content %>?tag=<%- page.l.collections %>"><%- page.l.collections %></a></li>
-                        <li><a href="/<%- page.urls.type %>/<%- page.urls.types.movie %>"><%- page.l.rating %> (<%- page.l.movies %>)</a></li>
-                        <li><a href="/<%- page.urls.type %>/<%- page.urls.types.serial %>"><%- page.l.rating %> (<%- page.l.series %>)</a></li>
+                        <li>
+                            <a href="/<%- page.urls.content %>?tag=<%- page.l.collections %>"><%- page.l.collections %></a>
+                        </li>
+                        <li><a href="/<%- page.urls.type %>/<%- page.urls.types.movie %>"><%- page.l.rating %>
+                                (<%- page.l.movies %>)</a></li>
+                        <li><a href="/<%- page.urls.type %>/<%- page.urls.types.serial %>"><%- page.l.rating %>
+                                (<%- page.l.series %>)</a></li>
                     </ul>
                 </div>
 
                 <% if (page.social) { %>
                     <div class="social">
-                        <% if (page.social.twitter) { %><a href="<%- page.social.twitter %>" target="_blank" class="sbut tw"></a><% } %>
-                        <% if (page.social.facebook) { %><a href="<%- page.social.facebook %>" target="_blank" class="sbut fb"></a><% } %>
-                        <% if (page.social.vk) { %><a href="<%- page.social.vk %>" target="_blank" class="sbut vk"></a><% } %>
-                        <% if (page.social.telegram) { %><a href="<%- page.social.telegram %>" target="_blank" class="sbut tg"></a><% } %>
-                        <% if (page.social.youtube) { %><a href="<%- page.social.youtube %>" target="_blank" class="sbut yt"></a><% } %>
-                        <% if (page.social.instagram) { %><a href="<%- page.social.instagram %>" target="_blank" class="sbut in"></a><% } %>
+                        <% if (page.social.twitter) { %><a href="<%- page.social.twitter %>" target="_blank"
+                                                           class="sbut tw"></a>
+                        <% } %>
+                        <% if (page.social.facebook) { %><a href="<%- page.social.facebook %>" target="_blank"
+                                                            class="sbut fb"></a>
+                        <% } %>
+                        <% if (page.social.vk) { %><a href="<%- page.social.vk %>" target="_blank" class="sbut vk"></a>
+                        <% } %>
+                        <% if (page.social.telegram) { %><a href="<%- page.social.telegram %>" target="_blank"
+                                                            class="sbut tg"></a>
+                        <% } %>
+                        <% if (page.social.youtube) { %><a href="<%- page.social.youtube %>" target="_blank"
+                                                           class="sbut yt"></a>
+                        <% } %>
+                        <% if (page.social.instagram) { %><a href="<%- page.social.instagram %>" target="_blank"
+                                                             class="sbut in"></a>
+                        <% } %>
                     </div>
                 <% } %>
 
