--- a/views/category.ejs
+++ b/views/category.ejs
@@ -40,7 +40,7 @@
 
         <div style="clear: both;"></div>
 
-        <% if (typeof content === 'object') { %>
+        <% if (typeof content === 'object' && page.current_page === 1) { %>
             <div class="cinemapress-content">
                 <% if (content.image) { %>
                     <img src="<%- content.image %>" class="cinemapress-content-image">
@@ -234,7 +234,7 @@
                 </div>
             <% } %>
 
-            <% if (typeof content === 'object') { %>
+            <% if (typeof content === 'object' && page.current_page === 1) { %>
                 <% if (page.comments) { %>
                     <div style="padding: 10px;">
                         <%- page.comments %>
