Changed check category

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
 
                 <div style="clear: both;"></div>
 
-                <% if (category.movies.length) {
+                <% if (typeof category === 'object' && category.movies && category.movies.length) {
                 category.movies.forEach(function (movie) { %>
                     <div class="story story_m">
                         <div class="s_name">
