--- a/views/trailer.ejs
+++ b/views/trailer.ejs
@@ -246,7 +246,7 @@
                             </div>
                         </h4>
                     </div>
-                    <% if (category.movies.length) {
+                    <% if (typeof category === 'object' && category.movies && category.movies.length) {
                     category.movies.forEach(function (movie) { %>
                         <div class="item">
                             <a href="<%- movie.url %>"><img src="<%- movie.poster %>" alt="<%= movie.title %>"
