--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -75,7 +75,7 @@ index[type].forEach(function (category) { %>
         <div style="margin: 0 0 30px 0;color: #fff;font-size: 20px;font-weight: bold;"><%- category.name %></div>
 
         <% var moreEpisodes = false; %>
-        <% if (category.movies.length) {
+        <% if (typeof category === 'object' && category.movies && category.movies.length) {
         category.movies.forEach(function (movie) { %>
 
             ﻿
