Added branding code

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,3 +1,7 @@
+<% if (typeof page.adv === 'object' && page.adv.brand) { %>
+    <%- page.adv.brand %>
+<% } %>
+
 <div class="new_head">
     <div class="head">
         <div class="logo">
