--- a/views/trailer.ejs
+++ b/views/trailer.ejs
@@ -148,6 +148,7 @@
                     <div class="gall">
 
                         <ul class="gal_line">
+                            <li><a href="<%- movie.url %>"><%- page.l.information %></a></li>
                             <li class="active"><%- page.l.trailer %></li>
                             <% if (page.urls.movies.online) { %>
                                 <li><a href="<%- movie.url %>/<%- page.urls.movies.online %>"><%- page.l.online %></a>
