--- a/views/download.ejs
+++ b/views/download.ejs
@@ -148,6 +148,7 @@
                     <div class="gall">
 
                         <ul class="gal_line">
+                            <li><a href="<%- movie.url %>"><%- page.l.information %></a></li>
                             <li class="active"><%- page.l.download %></li>
                             <% if (page.urls.movies.trailer) { %>
                                 <li><a href="<%- movie.url %>/<%- page.urls.movies.trailer %>"><%- page.l.trailer %></a>
