--- a/views/episode.ejs
+++ b/views/episode.ejs
@@ -148,12 +148,13 @@
                     <div class="gall">
 
                         <ul class="gal_line">
-                            <% if (page.urls.movies.online) { %>
-                                <li><a href="<%- movie.url %>/<%- page.urls.movies.online %>"><%- page.l.online %></a>
-                                </li>
-                            <% } %>
+                            <li><a href="<%- movie.url %>"><%- page.l.information %></a></li>
                             <% if (page.urls.movies.trailer) { %>
                                 <li><a href="<%- movie.url %>/<%- page.urls.movies.trailer %>"><%- page.l.trailer %></a>
+                                </li>
+                            <% } %>
+                            <% if (page.urls.movies.online) { %>
+                                <li><a href="<%- movie.url %>/<%- page.urls.movies.online %>"><%- page.l.online %></a>
                                 </li>
                             <% } %>
                             <li class="complaint not-tab"><a href="javascript:void(0)"
