--- a/views/online.ejs
+++ b/views/online.ejs
@@ -148,11 +148,12 @@
                     <div class="gall">
 
                         <ul class="gal_line">
-                            <li class="active"><%- page.l.online %></li>
+                            <li><a href="<%- movie.url %>"><%- page.l.information %></a></li>
                             <% if (page.urls.movies.trailer) { %>
                                 <li><a href="<%- movie.url %>/<%- page.urls.movies.trailer %>"><%- page.l.trailer %></a>
                                 </li>
                             <% } %>
+                            <li class="active"><%- page.l.online %></li>
                             <li class="complaint not-tab"><a href="javascript:void(0)"
                                                              id="watchLater"><%- page.l.later %></a></li>
                         </ul>
