--- a/views/category.ejs
+++ b/views/category.ejs
@@ -151,7 +151,7 @@
                                    class="poster_tr"></a>
                             <% } %>
                         </div>
-                        <a href="<%- movie.url %>" rel="nofollow"><img src="<%- movie.poster %>"
+                        <a href="<%- movie.url %>" rel="nofollow"><img src="<%- movie.poster_min %>" data-cinemapress-src="<%- movie.poster %>"
                                                                        alt="<%= movie.title %>"
                                                                        title="<%= movie.title %>"> </a>
                     </div>
