--- a/views/online.ejs
+++ b/views/online.ejs
@@ -149,13 +149,12 @@
 
                         <ul class="gal_line">
                             <li><a href="<%- movie.url %>"><%- page.l.information %></a></li>
+                            <li class="active"><%- page.l.online %></li>
                             <% if (page.urls.movies.trailer) { %>
                                 <li><a href="<%- movie.url %>/<%- page.urls.movies.trailer %>"><%- page.l.trailer %></a>
                                 </li>
                             <% } %>
-                            <li class="active"><%- page.l.online %></li>
-                            <li class="complaint not-tab"><a href="javascript:void(0)"
-                                                             id="watchLater"><%- page.l.later %></a></li>
+                            <li class="complaint not-tab"><a href="javascript:void(0)" id="watchLater"><%- page.l.later %></a></li>
                         </ul>
 
                         <div id="cinemapress-player" style="width: 683px;">
