--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
                                        class="poster_tr"></a>
                                 <% } %>
                             </div>
-                            <a href="<%- movie.url %>" rel="nofollow"><img src="<%- movie.poster_min %>" data-cinemapress-src="<%- movie.poster %>"
+                            <a href="<%- movie.url %>" rel="nofollow"><img src="<%- movie.poster_min %>" class="lazy" data-src="<%- movie.poster %>"
                                                                            alt="<%= movie.title %>"
                                                                            title="<%= movie.title %>"></a>
                         </div>
