--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -41,7 +41,7 @@
                             <div class="hs_item inner">
                                 <a href="<%- movie.url %>">
                                     <div class="hs_item_play"></div>
-                                    <img src="<%- movie.poster_min %>" data-cinemapress-src="<%- movie.poster %>" alt="<%= movie.title %>" title="<%= movie.title %>">
+                                    <img src="<%- movie.poster_min %>" class="lazy" data-src="<%- movie.poster %>" alt="<%= movie.title %>" title="<%= movie.title %>">
                                 </a>
                             </div>
                         </li>
