--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,6 @@
 <div class="content">
     <ul>
-        <li style="color: #fff">&copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.io"
+        <li style="color: #fff">&copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://github.com/CinemaPress/CinemaPress"
                                                                                     target="_blank">CinemaPress</a></li>
         <li><a href="/"><%- page.l.home %></a></li>
         <li style="color: #ccc">Email: <span id="mylo">Activate JS</span>
